--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -4,11 +4,18 @@ header {
    display: flex;
    justify-content: space-between;
    margin-bottom: 63px;
-   ul {
+   nav {
       display: flex;
-      list-style: none;
-      column-gap: 57px;
-      color: #ff6060;
-      font-size: 24px;
+      align-items: center;
+      ul {
+         display: flex;
+         list-style: none;
+         column-gap: 57px;
+         color: #ff6060;
+         font-size: 24px;
+      }
    }
+}
+.active {
+   text-decoration: underline;
 }
