--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -2,10 +2,11 @@ footer {
    background-color: #000;
    display: flex;
    flex-direction: column;
-   justify-content: center;
+   // justify-content: center;
    align-items: center;
    padding-top: 66px;
    padding-bottom: 30px;
+   // justify-self: flex-end;
    color: #fff;
    img {
       margin-bottom: 30px;
