--- a/src/Components/Layout/Layout.module.scss
+++ b/src/Components/Layout/Layout.module.scss
@@ -1,4 +1,13 @@
+.layoutContainer {
+   background-color: blue;
+   min-height: 100vh;
+   display: flex;
+   flex-direction: column;
+}
 .childContainer {
    padding: 0 100px;
    margin-bottom: 43px;
+   display: flex;
+   flex-direction: column;
+   background-color: green;
 }
