finilized desktop version

--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -1,9 +1,8 @@
 header {
-   padding: 0 100px;
+   padding: 0 6.95vw;
    padding-top: 40px;
    display: flex;
    justify-content: space-between;
-   margin-bottom: 63px;
    nav {
       display: flex;
       align-items: center;
