--- a/src/App.scss
+++ b/src/App.scss
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat&display=swap");
+@import "./Utils/mixins";
 
 *,
 ::before,
@@ -6,6 +7,7 @@
    margin: 0;
    padding: 0;
    box-sizing: border-box;
+   font-weight: 500;
 }
 
 body {
