--- a/src/Components/Banner/Banner.module.scss
+++ b/src/Components/Banner/Banner.module.scss
@@ -1,14 +1,16 @@
+@import "../../Utils/mixins";
+
 .banner {
    width: 100%;
-   height: 223px;
-   background-size: cover;
+   height: 111px;
    opacity: 0.7;
    display: flex;
    align-items: center;
-   justify-content: center;
-   border-radius: 25px;
+   justify-content: flex-start;
+   border-radius: 10px;
    position: relative;
    color: #fff;
+   padding: 0 16px;
 
    span {
       position: absolute;
@@ -18,15 +20,51 @@
       height: 100%;
       background-color: rgba(0, 0, 0, 0.3);
       z-index: -1;
-      border-radius: 25px;
+      border-radius: 10px;
+   }
+   h1 {
+      font-size: 24px;
+      font-weight: 500;
+      width: 72%;
    }
 }
 
 .about {
-   background-image: url("../../assets/AboutBanner.png");
+   background-image: url("../../assets/mobileAboutBanner.png");
    margin-bottom: 31px;
+   height: 223px;
+   background-size: cover;
 }
 .home {
    background-image: url("../../assets/HomeBanner.png");
-   margin-bottom: 43px;
+   margin-bottom: 22px;
+   background-position: center;
+}
+
+@include tablet {
+   .banner {
+      height: 223px;
+      justify-content: center;
+      border-radius: 25px;
+      padding: 0;
+
+      span {
+         border-radius: 25px;
+      }
+      h1 {
+         width: fit-content;
+         font-size: 48px;
+      }
+   }
+   .about {
+      background-image: url("../../assets/AboutBanner.png");
+      margin-bottom: 31px;
+   }
+   .home {
+      margin-bottom: 43px;
+      background-position: initial;
+   }
+}
+
+@include desktop {
 }
