--- a/src/Components/Card/Card.module.scss
+++ b/src/Components/Card/Card.module.scss
@@ -1,21 +1,41 @@
+@import "../../Utils/mixins";
+
 .card {
-   width: 340px;
-   height: 340px;
+   width: 100%;
+   height: 255px;
    position: relative;
+
    img {
       width: 100%;
       height: 100%;
       border-radius: 10px;
       object-fit: cover;
    }
+
    figcaption {
       position: absolute;
       bottom: 0;
       left: 0;
-      padding: 20px;
+      padding: 15px 20px;
+      // background-color: rgba(0, 0, 0, 0.3);
+      width: 100%;
+      border-radius: 0 0 10px 10px;
    }
    h2 {
       color: #fff;
       font-size: 18px;
+   }
+}
+
+@include tablet {
+   .card {
+      width: 340px;
+      height: 340px;
+   }
+}
+
+@include desktop {
+   .card {
+      width: 340px;
    }
 }
