--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -1,13 +1,40 @@
+@import "../../Utils/mixins";
+
 footer {
    background-color: #000;
    display: flex;
    flex-direction: column;
    align-items: center;
-   padding-top: 66px;
-   padding-bottom: 30px;
+   padding-top: 62px;
+   padding-bottom: 48px;
    color: #fff;
 
    img {
-      margin-bottom: 30px;
+      margin-bottom: 44px;
+   }
+   p {
+      font-size: 12px;
+   }
+}
+
+@include tablet {
+}
+
+@include desktop {
+   footer {
+      background-color: #000;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      padding-top: 66px;
+      padding-bottom: 30px;
+      color: #fff;
+
+      img {
+         margin-bottom: 44px;
+      }
+      p {
+         font-size: 24px;
+      }
    }
 }
