--- a/src/Pages/Error.module.scss
+++ b/src/Pages/Error.module.scss
@@ -1,13 +1,47 @@
+@import "../Utils/mixins";
+
 .errorContent {
    color: #ff6060;
+   display: flex;
+   flex-direction: column;
+   align-items: center;
    text-align: center;
    height: 100%;
-   padding: 80px 0 80px 0;
-   h1 {
-      margin-top: 66px;
-      margin-bottom: 74px;
+   img {
+      width: 198px;
+      height: 99px;
    }
+   h1 {
+      font-size: 18px;
+      width: 65%;
+      margin-top: 11px;
+      margin-bottom: 133px;
+   }
+
    p {
+      font-size: 14px;
       text-decoration: underline;
    }
+}
+
+@include tablet {
+   .errorContent {
+      height: 100%;
+      img {
+         width: 597px;
+         height: 263px;
+      }
+      h1 {
+         font-size: 36px;
+         width: 100%;
+         margin-top: 66px;
+         margin-bottom: 74px;
+      }
+      p {
+         font-size: 18px;
+      }
+   }
+}
+
+@include desktop {
 }
