--- a/src/Pages/Lodging.module.scss
+++ b/src/Pages/Lodging.module.scss
@@ -1,62 +1,118 @@
+@import "../Utils/mixins";
+
 .infosContainer {
    display: flex;
    justify-content: space-between;
+   flex-direction: column;
    .lodgingInfos {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
       .infosHeader {
-         margin-top: 30px;
+         margin-top: 15px;
          h1 {
-            font-size: 36px;
+            font-size: 18px;
          }
          h2 {
-            font-size: 18px;
+            font-size: 14px;
          }
       }
 
       .tagContainer {
-         margin-bottom: 24px;
-         margin-top: 20px;
+         margin-bottom: 16px;
+         margin-top: 10px;
          display: flex;
-         column-gap: 10px;
+         flex-wrap: wrap;
+         gap: 5px 10px;
       }
    }
 
    .socialInfos {
-      width: fit-content;
-      padding-top: 24px;
-      padding-bottom: 30px;
+      width: 100%;
+      padding-bottom: 16px;
       display: flex;
-      flex-direction: column;
+      flex-direction: row-reverse;
       justify-content: space-between;
+      align-items: center;
       div:first-of-type {
          display: flex;
-         align-self: flex-end;
          align-items: center;
          column-gap: 10px;
          p {
+            font-size: 12px;
             text-align: right;
-            max-width: 80px;
+            max-width: 60px;
             height: fit-content;
          }
          img {
             border-radius: 100%;
-            width: 64px;
+            width: 32px;
          }
       }
       div:last-of-type {
          display: flex;
          column-gap: 10px;
-         justify-content: flex-end;
       }
    }
 }
 .collapsibleContainer {
    display: flex;
-   column-gap: 76px;
+   flex-direction: column;
    padding-bottom: 2%;
    div {
       width: 100%;
    }
+}
+
+@include tablet {
+   .infosContainer {
+      flex-direction: row;
+      .lodgingInfos {
+         .infosHeader {
+            margin-top: 30px;
+            h1 {
+               font-size: 36px;
+            }
+            h2 {
+               font-size: 18px;
+            }
+         }
+
+         .tagContainer {
+            margin-bottom: 24px;
+            margin-top: 20px;
+         }
+      }
+
+      .socialInfos {
+         width: fit-content;
+         padding-top: 24px;
+         padding-bottom: 30px;
+         flex-direction: column;
+         div:first-of-type {
+            align-self: flex-end;
+            column-gap: 10px;
+            p {
+               font-size: 18px;
+               max-width: 80px;
+            }
+            img {
+               width: 64px;
+            }
+         }
+         div:last-of-type {
+            column-gap: 10px;
+            justify-content: flex-end;
+         }
+      }
+   }
+   .collapsibleContainer {
+      display: flex;
+      flex-direction: row;
+      column-gap: 76px;
+      padding-bottom: 1.8%;
+   }
+}
+
+@include desktop {
 }
