--- a/src/Components/Layout/Layout.module.scss
+++ b/src/Components/Layout/Layout.module.scss
@@ -14,22 +14,9 @@
    justify-self: flex-start;
 }
 
-@include tablet {
-   .layoutContainer {
-      // background-color: blue;
-      min-height: 100vh;
-      display: flex;
-      flex-direction: column;
-      justify-content: space-between;
-   }
+@include m-screen {
    .childContainer {
       padding: 0 6.95vw;
       padding-top: 50px;
-      display: flex;
-      flex-direction: column;
-      justify-self: flex-start;
    }
-}
-
-@include desktop {
 }
