--- a/src/App.scss
+++ b/src/App.scss
@@ -12,7 +12,14 @@
 
 body {
    width: 100%;
-   height: 100%;
+   min-height: 100vh;
    color: #ff6060;
    font-family: "Montserrat", sans-serif;
+   max-width: 1440px;
+}
+@media screen and (min-width: 1441px) {
+   body {
+      margin: 0 auto;
+      border: 1px solid #000;
+   }
 }
