--- a/src/Components/Banner/Banner.module.scss
+++ b/src/Components/Banner/Banner.module.scss
@@ -41,7 +41,7 @@
    background-position: center;
 }
 
-@include tablet {
+@include m-screen {
    .banner {
       height: 223px;
       justify-content: center;
@@ -53,7 +53,7 @@
       }
       h1 {
          width: fit-content;
-         font-size: 48px;
+         font-size: 32px;
       }
    }
    .about {
@@ -66,5 +66,12 @@
    }
 }
 
-@include desktop {
+@include l-screen {
+   .banner {
+      border-radius: 25px;
+
+      h1 {
+         font-size: 48px;
+      }
+   }
 }
