--- a/src/Components/Carrousel/Carrousel.scss
+++ b/src/Components/Carrousel/Carrousel.scss
@@ -31,7 +31,7 @@
    }
 }
 
-@include tablet {
+@include m-screen {
    .carrousel {
       height: 415px;
       .left,
@@ -58,7 +58,4 @@
          color: white;
       }
    }
-}
-
-@include desktop {
 }
