--- a/src/Components/Footer/Footer.module.scss
+++ b/src/Components/Footer/Footer.module.scss
@@ -17,22 +17,11 @@ footer {
    }
 }
 
-@include tablet {
-}
-
-@include desktop {
+@include m-screen {
    footer {
-      background-color: #000;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
       padding-top: 66px;
       padding-bottom: 30px;
-      color: #fff;
 
-      img {
-         margin-bottom: 44px;
-      }
       p {
          font-size: 24px;
       }
