--- a/src/Components/Header/Header.scss
+++ b/src/Components/Header/Header.scss
@@ -25,23 +25,26 @@ header {
    text-decoration: underline;
 }
 
-@include tablet {
-}
-
-@include desktop {
+@include m-screen {
    header {
       padding: 0 6.95vw;
       padding-top: 40px;
-      display: flex;
-      justify-content: space-between;
       nav {
-         display: flex;
-         align-items: center;
          ul {
-            display: flex;
-            list-style: none;
+            column-gap: 30px;
+            font-size: 18px;
+         }
+      }
+   }
+}
+
+@include l-screen {
+   header {
+      padding: 0 6.95vw;
+      padding-top: 40px;
+      nav {
+         ul {
             column-gap: 57px;
-            color: #ff6060;
             font-size: 24px;
          }
       }
