--- a/src/Pages/Lodging.module.scss
+++ b/src/Pages/Lodging.module.scss
@@ -58,13 +58,13 @@
 .collapsibleContainer {
    display: flex;
    flex-direction: column;
-   padding-bottom: 2%;
+   padding-bottom: 2.4vh;
    div {
       width: 100%;
    }
 }
 
-@include tablet {
+@include m-screen {
    .infosContainer {
       flex-direction: row;
       .lodgingInfos {
@@ -107,12 +107,8 @@
       }
    }
    .collapsibleContainer {
-      display: flex;
       flex-direction: row;
       column-gap: 76px;
       padding-bottom: 1.8%;
    }
-}
-
-@include desktop {
 }
