--- a/src/Utils/_mixins.scss
+++ b/src/Utils/_mixins.scss
@@ -1,10 +1,10 @@
-@mixin tablet {
+@mixin m-screen {
    @media screen and (min-width: 768px) {
       @content;
    }
 }
 
-@mixin desktop {
+@mixin l-screen {
    @media screen and (min-width: 992px) {
       @content;
    }
