added missing cursor event

--- a/src/Components/Carrousel/Carrousel.scss
+++ b/src/Components/Carrousel/Carrousel.scss
@@ -38,6 +38,9 @@
       .right {
          top: 50%;
          width: 46px;
+         &:hover {
+            cursor: pointer;
+         }
       }
       .left {
          margin-left: 24px;
