--- a/src/Components/Collapsible/Collapsible.module.scss
+++ b/src/Components/Collapsible/Collapsible.module.scss
@@ -15,6 +15,9 @@
       border-radius: 5px;
       display: flex;
       justify-content: space-between;
+      &:hover {
+         cursor: pointer;
+      }
    }
    img {
       align-self: center;
